package com.tinsae.socialmediaplatform.common.enums;

public enum MediaStatus {
    VISIBLE,
    HIDDEN,
    DELETED
}
