package com.tinsae.socialmediaplatform.common.enums;

public enum NotificationType {
    FOLLOW,
    COMMENT,
    REACTION,
    MESSAGE,
    REPORT_UPDATE,
    SYSTEM
}
